tests/dataset/tpc-ds/compiler/erlang/q27.error
run: exit status 127
escript: exception error: bad key: ss_quantity
  in function  map_get/2
     called as map_get(ss_quantity,
                       #{cd =>
                             #{cd_demo_sk => 1,cd_gender => "F",
                               cd_marital_status => "M",
                               cd_education_status => "College"},
                         i => #{i_item_sk => 1,i_item_id => "ITEM1"},
                         s => #{s_store_sk => 1,s_state => "CA"},
                         ss =>
                             #{ss_item_sk => 1,ss_store_sk => 1,
                               ss_cdemo_sk => 1,ss_sold_date_sk => 1,
                               ss_quantity => 5,ss_list_price => 100,
                               ss_coupon_amt => 10,ss_sales_price => 90},
                         d => #{d_date_sk => 1,d_year => 2000}})
     *** argument 1: not present in map
  in call from q27_erl__escript__1752__561075__385480__8962:'-main/1-lc$^8/1-2-'/1 (/tmp/q27.erl, line 11)
  in call from q27_erl__escript__1752__561075__385480__8962:'-main/1-lc$^6/1-1-'/1 (/tmp/q27.erl, line 11)
  in call from q27_erl__escript__1752__561075__385480__8962:main/1 (/tmp/q27.erl, line 11)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
