tests/dataset/tpc-ds/compiler/erlang/q27.erl
#!/usr/bin/env escript
% Generated by Mochi compiler v0.10.26 on 2020-01-02T15:04:05Z
% q27.erl - generated from q27.mochi

main(_) ->
    Store_sales = [#{ss_item_sk => 1, ss_store_sk => 1, ss_cdemo_sk => 1, ss_sold_date_sk => 1, ss_quantity => 5, ss_list_price => 100, ss_coupon_amt => 10, ss_sales_price => 90}, #{ss_item_sk => 2, ss_store_sk => 2, ss_cdemo_sk => 2, ss_sold_date_sk => 1, ss_quantity => 2, ss_list_price => 50, ss_coupon_amt => 5, ss_sales_price => 45}],
    Customer_demographics = [#{cd_demo_sk => 1, cd_gender => "F", cd_marital_status => "M", cd_education_status => "College"}, #{cd_demo_sk => 2, cd_gender => "M", cd_marital_status => "S", cd_education_status => "College"}],
    Date_dim = [#{d_date_sk => 1, d_year => 2000}],
    Store = [#{s_store_sk => 1, s_state => "CA"}, #{s_store_sk => 2, s_state => "TX"}],
    Item = [#{i_item_sk => 1, i_item_id => "ITEM1"}, #{i_item_sk => 2, i_item_id => "ITEM2"}],
    Result = [V || {_, V} <- lists:keysort(1, [{[mochi_get(item_id, Key0), mochi_get(state, Key0)], #{i_item_id => mochi_get(item_id, Key0), s_state => mochi_get(state, Key0), agg1 => (lists:sum([mochi_get(ss_quantity, X) || X <- Val0]) / length([mochi_get(ss_quantity, X) || X <- Val0])), agg2 => (lists:sum([mochi_get(ss_list_price, X) || X <- Val0]) / length([mochi_get(ss_list_price, X) || X <- Val0])), agg3 => (lists:sum([mochi_get(ss_coupon_amt, X) || X <- Val0]) / length([mochi_get(ss_coupon_amt, X) || X <- Val0])), agg4 => (lists:sum([mochi_get(ss_sales_price, X) || X <- Val0]) / length([mochi_get(ss_sales_price, X) || X <- Val0]))}} || {Key0, Val0} <- maps:to_list(lists:foldl(fun({Key0, Val0}, Acc0) -> L = maps:get(Key0, Acc0, []), maps:put(Key0, [Val0 | L], Acc0) end, #{}, [{#{item_id => mochi_get(i_item_id, I), state => mochi_get(s_state, S)}, #{ss => Ss, cd => Cd, d => D, s => S, i => I}} || Ss <- Store_sales, Cd <- Customer_demographics, D <- Date_dim, S <- Store, I <- Item, (mochi_get(ss_cdemo_sk, Ss) == mochi_get(cd_demo_sk, Cd)), (mochi_get(ss_sold_date_sk, Ss) == mochi_get(d_date_sk, D)), (mochi_get(ss_store_sk, Ss) == mochi_get(s_store_sk, S)), (mochi_get(ss_item_sk, Ss) == mochi_get(i_item_sk, I)), (((((mochi_get(cd_gender, Cd) == "F") andalso (mochi_get(cd_marital_status, Cd) == "M")) andalso (mochi_get(cd_education_status, Cd) == "College")) andalso (mochi_get(d_year, D) == 2000)) andalso lists:member(mochi_get(s_state, S), ["CA"]))]))])],
    mochi_json(Result),
    (case (Result == [#{i_item_id => "ITEM1", s_state => "CA", agg1 => 5, agg2 => 100, agg3 => 10, agg4 => 90}]) of true -> ok; _ -> erlang:error(test_failed) end).

mochi_get(K, M) ->
    case maps:find(K, M) of
        {ok, V} -> V;
        error ->
            Name = atom_to_list(K),
            case string:tokens(Name, "_") of
                [Pref|_] ->
                    P = list_to_atom(Pref),
                    case maps:find(P, M) of
                        {ok, Sub} when is_map(Sub) -> maps:get(K, Sub);
                        _ -> erlang:error({badkey, K})
                    end;
                _ -> erlang:error({badkey, K})
            end
        end.
    
    mochi_escape_json([]) -> [];
    mochi_escape_json([H|T]) ->
        E = case H of
            $\ -> "\\";
            $" -> "\"";
            _ -> [H]
        end,
        E ++ mochi_escape_json(T).
    
    mochi_to_json(true) -> "true";
    mochi_to_json(false) -> "false";
    mochi_to_json(V) when is_integer(V); is_float(V) -> lists:flatten(io_lib:format("~p", [V]));
    mochi_to_json(V) when is_binary(V) -> "\"" ++ mochi_escape_json(binary_to_list(V)) ++ "\"";
    mochi_to_json(V) when is_list(V), (V =:= [] orelse is_integer(hd(V))) -> "\"" ++ mochi_escape_json(V) ++ "\"";
    mochi_to_json(V) when is_list(V) -> "[" ++ lists:join(",", [mochi_to_json(X) || X <- V]) ++ "]";
    mochi_to_json(V) when is_map(V) -> "{" ++ lists:join(",", ["\"" ++ atom_to_list(K) ++ "\":" ++ mochi_to_json(Val) || {K,Val} <- maps:to_list(V)]) ++ "}".
    
    mochi_json(V) -> io:format("~s
", [mochi_to_json(V)]).
